commit for mac setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ jwt.secret=JournalAppTetForAuth
 spring.main.allow-bean-definition-overriding=true
 logging.level.org.springframework.security=DEBUG
 spring.cache.type=caffeine
-spring.cache.cache-names=otpCache
+spring.cache.cache-names=otpCache, otpRegistration
 spring.cache.caffeine.spec=maximumSize=1000,expireAfterWrite=5m
