--- a/scm-backend/src/main/resources/application.properties
+++ b/scm-backend/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=scm-backend
+
+server.port=8082
+#datasource configurations
+spring.datasource.url=jdbc:mysql://localhost:3306/scm?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Manish@20
+
+# Hibernate Properties
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
